syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld3";
option java_outer_classname = "HelloWorldProto3";
option objc_class_prefix = "HLW";

package helloworld;

// The greeting service definition.
service Greeter3 {
  // Sends a greeting
  rpc SayHello (HelloRequest3) returns (HelloReply3) {}
}

// The request message containing the user's name.
message HelloRequest3 {
  string name = 1;
}

// The response message containing the greetings
message HelloReply3 {
  string message = 1;
}